--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
     "license": "MIT",
     "dependencies": {
         "react": "*",
-        "react-dom": "*"
+        "react-dom": "*",
+        "react-relay": "*",
+        "isomorphic-relay": "*",
+        "graphql": "*",
+        "graphql-relay": "*"
     },
     "devDependencies": {
+        "express": "*",
+        "express-graphql": "*",
         "babel-polyfill": "*",
         "babel-preset-es2015": "*",
         "babel-preset-react": "*",
         "babel-preset-stage-2": "*",
         "babel-plugin-transform-class-properties": "*",
         "babel-relay-plugin-loader": "*",
-        "graphql": "*",
         "mocha": "*",
-        "should": "*",
-        "react-relay": "*",
-        "isomorphic-relay": "*"
+        "should": "*"
     },
     "metadata": {
         "graphql": {
