--- a/.flowconfig
+++ b/.flowconfig
@@ -6,9 +6,6 @@ interfaces/
 [options]
 
 [ignore]
-.*/dist/.*
 .*/coverage/.*
 .*/scripts/.*
-.*/node_modules/babel-.*/.*
-.*/node_modules/babylon/.*
-.*/node_modules/fbjs/.*
+.*/node_modules/.*
