--- a/package.json
+++ b/package.json
@@ -1,46 +1,32 @@
 {
   "author": "Jeswin Kumar <jeswinpk@agilehead.com>",
   "name": "isotropy-adapter-react",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "React adapter for Isotropy.",
   "repository": {
     "type": "git",
     "url": "https://github.com/jeswin/isotropy-adapter-react.git"
   },
   "scripts": {
-    "update-schema": "node ./dist/scripts/updateSchema.js",
     "test": "mocha dist/test/test.js"
   },
   "main": "dist/isotropy-adapter-react",
   "license": "MIT",
   "dependencies": {
     "react": "*",
-    "react-dom": "*",
-    "react-relay": "*",
-    "isomorphic-relay": "*"
+    "react-dom": "*"
   },
   "devDependencies": {
-    "express": "*",
-    "express-graphql": "*",
-    "graphql": "*",
-    "graphql-relay": "*",
     "babel-polyfill": "*",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "babel-preset-stage-2": "*",
     "babel-plugin-transform-class-properties": "*",
-    "babel-relay-plugin-loader": "*",
     "mocha": "*",
     "should": "*"
   },
-  "metadata": {
-    "graphql": {
-      "schema": "./dist/test/my-schema.json"
-    }
-  },
   "keywords": [
     "react",
-    "relay",
     "isomorphic",
     "isotropy"
   ]
