Switch to shared interfaces

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "author": "Jeswin Kumar <jeswinpk@agilehead.com>",
   "name": "isotropy-adapter-react",
-  "version": "0.7.1",
+  "version": "0.7.3",
   "description": "React adapter for Isotropy.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jeswin/isotropy-adapter-react.git"
+    "url": "https://github.com/nodejam/isotropy-adapter-react.git"
   },
   "scripts": {
     "test": "mocha dist/test/test.js"
@@ -14,7 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "isotropy-interfaces": "*"
   },
   "devDependencies": {
     "babel-polyfill": "*",
